<resources>
    <string name="app_name">AUTOLIST</string>
    <string name="version">Version 8 . 0. 0</string>
    <string name="search">search</string>
    <string name="content_description_search">content_description_search</string>
    <string name="content_description_more">content_description_more</string>
    <string name="more">more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_client_id">92238366680-2nqrb4j840p8chqcjcg5971cp3cgjrca.apps.googleusercontent.com</string>
    <string name="web_client_secret">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</string>
    <string name="google_get_access_token_url">https://oauth2.googleapis.com/token</string>
    <string name="facebook_app_id">617178446082367</string>
    <string name="fb_login_protocol_scheme">fb617178446082367</string>
    <string name="goldText">* Sell 50 times faster\n<br />* Get featured in Social Media Platforms\n<br />* Get Featured In Motii Searches\n<br />* Get Featured In Motii Apps</string>
    <string name="silverText">* Sell 20 times faster\n<br />* Get featured in Social Media Platforms\n<br />* Get Featured In Motii Apps</string>
    <string name="bronzeText">* Sell 5 times faster\n<br />* Get Featured In Motii Apps</string>
    <string name="select_bronze">Select Bronze Package</string>
    <string name="select_silver">Select Silver Package</string>
    <string name="select_gold">Select Gold Package</string>
    <string name="choose_package">Choose A Package</string>
    <string name="icon">ICON</string>
    <string name="feature">Sell Faster</string>
    <string name="sold">Sold</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="admob_app_id">ca-app-pub-4400772367554677~6644636494</string>
    <string name="ad_unit_id">ca-app-pub-4400772367554677/4890547608</string>
    <string name="close_drawer">Clower Navigation</string>
    <string name="open_drawer">Open Navigation</string>
    <string name="content_description">TODO</string>
    <string name="app_name_logo">Autolist</string>
    <string name="search_main">Type your search here…</string>
    <string name="brand_new">Brand New</string>
    <string name="all_featured_cars">Featured Cars</string>
    <string name="locally_used">Locally Used</string>
    <string name="most_viewed">Trending</string>
    <string name="popular_makes">Popular Makes</string>
    <string name="view_all">View All</string>
    <string name="vehicle_types">Vehicle Types</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="restore_password">Restore Password</string>
    <string name="register_new_user">Register New User</string>
    <string name="log_in">Log In</string>
    <string name="_0">0</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="sell_faster">Sell Faster</string>
    <string name="vehicle_sold">Mark Sold</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="views">Views</string>
    <string name="fuel">Fuel</string>
    <string name="transmission">Transmission</string>
    <string name="engine_size">Engine Size</string>
    <string name="user_name">User Name</string>
    <string name="personal_information">Personal information</string>
    <string name="payments">Payments</string>
    <string name="dealership_account">Dealership account</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="give_us_feedback">Contact Us</string>
    <string name="how_motii_works">How Motii works</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="log_out">Log out</string>
    <string name="features">Features</string>
    <string name="extra_features">Extra Features</string>
    <string name="change">Change</string>
    <string name="edit_personal_info">Edit personal info</string>
    <string name="car_name">Car Name</string>
    <string name="no_payment_made_yet">No payment made yet</string>
    <string name="package_name">Package Name</string>
    <string name="payment_message">Payment Message</string>
    <string name="interior_image">Interior Image</string>
    <string name="dashboard_image">DashBoard Image</string>
    <string name="right_side_image">Right Side Image</string>
    <string name="front_image">Front Image</string>
    <string name="back_image">Back Image</string>
    <string name="add_more_images">Add More Images</string>
    <string name="post_car">Post Car</string>
    <string name="my_adverts">My Adverts</string>
    <string name="confirm_by_typing_delete">Confirm by typing delete</string>
    <string name="provide_the_required_details">Provide the required details</string>
    <string name="give_us_a_feedback">GIVE US A FEEDBACK</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="message">Message *</string>
    <string name="subject">Subject *</string>
    <string name="from">From *</string>
    <string name="please_wait">Please wait …</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="please_choose_your_country_code_and_enter_phone_number">Please Choose Your Country Code and Enter Phone Number</string>
    <string name="email_user">Email *</string>
    <string name="last_name">Last Name *</string>
    <string name="first_name">First Name *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="car_dealer_account">Car Dealer Account</string>
    <string name="duty">Duty</string>
    <string name="interior">Interior</string>
    <string name="model">Model</string>
    <string name="body">Body</string>
    <string name="color">Color</string>
    <string name="state">STATE</string>
    <string name="description">Description</string>
    <string name="similar_ads">Similar Ads</string>
    <string name="ksh">Ksh :</string>
    <string name="price">Price</string>
    <string name="active">Active</string>
    <string name="mileage">Mileage</string>
    <string name="make">Make</string>
    <string name="year">Year</string>
    <string name="call_seller">Call</string>
    <string name="more_features">More Features</string>
    <string name="mileage_kilometres">Mileage (Kilometres)</string>
    <string name="enter_engine_size_cc">Enter Engine Size (cc)</string>
    <string name="engine_size_cc">Engine Size (CC)</string>
    <string name="register_with_email">Register With Email</string>
    <string name="new_password">New Password *</string>
    <string name="confirm_new_password">Confirm New Password *</string>
    <string name="check_your_email_we_have_sent_you_instructions_n_on_how_to_change_your_password">Check your email. We have sent you instructions/n on how to change your password</string>
    <string name="or">OR</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="register_with_google">Register With Google</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="password">Password *</string>
    <string name="log_in_with_facebook">Log In With Facebook</string>
    <string name="log_in_with_google">Log In With Google</string>
    <string name="enter_your_email_address_to_change_password_n_we_will_send_an_email_with_instructions_on_how_to_do_that">Enter your email address to change password.\n We will send an email with instructions on how to do that.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="prize">Prize</string>
    <string name="days">Days</string>
    <string name="type_delete">TYPE DELETE</string>
    <string name="note_delete_can_t_be_undone">Note : DELETE can\'t be undone:</string>
    <string name="confirm_by_typing_sold">CONFIRM BY TYPING SOLD</string>
    <string name="paste_your_m_pesa_payment_confirmation_message_below">Paste Your M-Pesa Payment Confirmation Message Below</string>
    <string name="enter_otp_code_sent_to_your_phone_number">Enter OTP Code Sent To Your Phone Number</string>
    <string name="location">Location</string>
    <string name="land_rover">Land Rover</string>
    <string name="isuzu">Isuzu</string>
    <string name="audi">Audi</string>
    <string name="bmw">BMW</string>
    <string name="volkwagen">Volkswagen</string>
    <string name="mazda">Mazda</string>
    <string name="mercedes">Mercedes</string>
    <string name="mitsubishi">Mitsubishi</string>
    <string name="honda">Honda</string>
    <string name="subaru">Subaru</string>
    <string name="nissan">Nissan</string>
    <string name="toyota">Toyota</string>
    <string name="all_makes">All Makes</string>
    <string name="enter_mileage_in_km">Enter Mileage in km</string>
    <string name="gold">GOLD</string>
    <string name="silver">SILVER</string>
    <string name="bronze">BRONZE</string>
    <string name="prize_ksh_3_000_vat_included">PRIZE : KSH 3,000 (VAT INCLUDED)</string>
    <string name="prize_ksh_1500_vat_included">PRIZE : KSH 1500 (VAT INCLUDED)</string>
    <string name="prize_ksh_900_vat_included">PRIZE : KSH 900 (VAT INCLUDED)</string>
    <string name="gold_package_name">GOLD PACKAGE</string>
    <string name="silver_package_name">SILVER PACKAGE</string>
    <string name="enter_car_description">Enter Car Description</string>
    <string name="user_listings">User Listings</string>
    <string name="user_confirmed">User Confirmed</string>
    <string name="joined_at">Joined at</string>
    <string name="confirmed_phone">Confirmed Phone</string>
    <string name="confirmed_email">Confirmed Email</string>
    <string name="foreign_used">Foreign Used</string>
    <string name="all">All</string>
    <string name="verify_phone_numberr">Verify Phone Number</string>
    <string name="price_kenya_shillings">Price (Kenya Shillings)</string>
    <string name="price_is_negotiable">Price is negotiable</string>
    <string name="chat">Chat</string>
    <string name="message_seller">Message</string>
    <string name="gold_package">Gold</string>
    <string name="silver_package">Silver</string>
    <string name="bronze_package">Bronze</string>
    <string name="free_package">Free</string>
    <string name="free_package_name">FREE PACKAGE</string>
    <string name="limited_ad_view">Limited ad view</string>
    <string name="select_free_package">Select Free Package</string>
    <string name="bronze_package_name">BRONZE PACKAGE</string>
    <string name="status">Status</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="clear">Clear</string>
    <string name="recently_searched">Recently Searched</string>
    <string name="searched">Searched</string>
    <string name="filter_cars">Filter Cars</string>
    <string name="premium">Premium</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="copy_till_5620857">Copy Till: 5620857</string>
    <string name="underReview">Underreview</string>
    <string name="declined">Declined</string>
    <string name="type_sold">TYPE SOLD</string>
    <string name="confirm">Confirm</string>
    <string name="fcm_message">New message</string>
    <string name="default_notification_channel_id">Hallo</string>
    <string name="msg_subscribed">User subscribed to service</string>
    <string name="msg_subscribe_failed">User Subscription Failed</string>
    <string name="to_continue">Verify your phone number below to continue</string>
    <string name="todo">TODO</string>
</resources>